--- a/app/views/rubiests/index.html.erb
+++ b/app/views/rubiests/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
   <div class="col-md-8">
-    <%= @rubiest.description.html_safe %>
+    <%= @rubiest.try(:description).try(:html_safe) %>
   </div>
 
   <div class="col-sm-12">
