--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
                 <%= link_to "About", about_index_path %>
               </li>
               <li><%= link_to "Portfolio", portfolios_path %></li>
-              <li><%= link_to "Contact Me", contact_pages_path %></li>
+              <li><%= link_to "Contact Me", contact_path %></li>
               <li><%= link_to "Blog", blogs_path %></li>
             </ul>
           </li>
