--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,9 +43,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, <%= current_user.username.upcase %><b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li>
-                <%= link_to "Settings", edit_user_registration_path(current_user) %>
-              </li>
+             <!--  <li>
+                <%#= link_to "Settings", edit_user_registration_path(current_user) %>
+              </li> -->
               <li>
                 <%= link_to "Problems", problems_user_path(current_user) %>
               </li>
