order by position under about page content and some ui

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -5,10 +5,10 @@
   <div class="col-sm-7">
     <h3>Employment</h3>
     <% @employments.each_with_index do |employment, index| %>
-      <h5>
-      <%= employment.role %> - <%= employment.name %> (<%= datetimeformat(employment.get_started_at) %> - <%= datetimeformat(employment.get_end_at) %>)
-      </h5>
-      <%= employment.description %>
+      <strong class="block">
+      <%= employment.role %> - <%= employment.name %> (<i><%= datetimeformat(employment.get_started_at) %> - <%= datetimeformat(employment.get_end_at) %></i>)
+      </strong>
+      <%= employment.description.try(:html_safe) %>
       <% if @employments.count > index + 1 %>
         <hr>
       <% end %>
@@ -16,10 +16,10 @@
     <hr>
     <h3>Education</h3>
     <% @educations.each_with_index do |education, index| %>
-      <h5>
-        <%= education.cource %> - <%= education.college %>(<%= datetimeformat(education.get_started_at) %> - <%= datetimeformat(education.get_completed_at) %>)
-      </h5>
-      <%= education.description %>
+      <strong class="block">
+        <%= education.cource %> - <%= education.college %>(<i><%= datetimeformat(education.get_started_at) %> - <%= datetimeformat(education.get_completed_at) %></i>)
+      </strong>
+      <%= education.description.try(:html_safe) %>
       <% if @educations.count > index + 1 %>
         <hr>
       <% end %>
