ui changes like html_safe

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/header_title', header_title: "", header_sub_title: "Education / Professional / Technologies All about me!" %>
+<%= render 'shared/header_title', header_title: "", header_sub_title: "Educational / Professional / Technologies All about me!" %>
 <%= render "shared/meta_data" %>
 <!-- Intro Content -->
 <div class="row">
