--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </ul>
   <h4>Description:</h4>
-  <p><%= @portfolio.description %></p>
+  <p><%= @portfolio.description.try(:html_safe) %></p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
