--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/header_title', header_title: "", header_sub_title: "All the problems related to #{@topic.title}" %>
 
 <%= render "shared/solution_anchors" %>
-
+<%= render partial: "shared/meta_data" %>
 <!-- Intro Content -->
 <div class="row">
   <div class="col-sm-12">
