--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/header_title', header_title: "", header_sub_title: "Sandeep Maurya's profile" %>
+<%= render partial: "shared/meta_data" %>
 <!-- Row -->
 <div class="row">
   <div class="col-md-6 portfolio-item main-page-image">
