terms and conditions content changed

--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,14 +1,21 @@
-<%= render 'shared/header_title', header_title: "", header_sub_title: "Terms & conditions" %>
+<%= render 'shared/header_title', header_title: "", header_sub_title: "Terms & Conditions" %>
 
 <!-- Start row -->
 <div class="row">
-
-  <div class="col-sm-6">
-    Euismod dictumst nonummy imperdiet litora felis aptent. Dolor justo consequat augue vulputate. Condimentum montes taciti faucibus. Consectetuer Eu tempus convallis praesent nonummy eget sapien leo egestas interdum lorem nisl amet. Senectus primis potenti gravida sodales. Venenatis montes phasellus ad sapien augue mauris hymenaeos nulla. Molestie posuere bibendum torquent vivamus imperdiet posuere eleifend quisque platea rhoncus mi. Semper laoreet. Primis turpis elementum vulputate mauris rhoncus velit, justo pharetra per amet justo quis magna mattis nunc libero mollis varius litora semper amet mi, etiam euismod interdum. Pretium curae; platea mattis erat tortor molestie pulvinar. Risus porttitor Ultrices, tempor. Sodales viverra Taciti vel augue libero ornare nulla cubilia fermentum convallis morbi enim Ipsum mauris penatibus gravida. Interdum nullam congue cubilia molestie sollicitudin. A suscipit pretium. Hac, vestibulum Habitasse torquent. Primis et diam condimentum ad risus lacinia natoque ut, nibh sapien vel pede semper magnis montes arcu habitasse mollis dui tincidunt consectetuer. Cras. Morbi Leo. Risus. Habitant maecenas hymenaeos ad pretium natoque nulla dis integer arcu faucibus. Condimentum aliquet. Accumsan dis adipiscing lobortis consectetuer fermentum euismod accumsan viverra. Malesuada. Congue nullam quam felis. Pharetra. Praesent condimentum eget sed mattis nam justo parturient dictumst consectetuer. Cubilia vehicula quis nascetur metus potenti vulputate nonummy enim et, duis ullamcorper velit hymenaeos per bibendum urna id nascetur cras lorem fusce parturient at suscipit. 
-    <hr>
-  </div>
-  <div class="col-sm-6">
-    Euismod dictumst nonummy imperdiet litora felis aptent. Dolor justo consequat augue vulputate. Condimentum montes taciti faucibus. Consectetuer Eu tempus convallis praesent nonummy eget sapien leo egestas interdum lorem nisl amet. Senectus primis potenti gravida sodales. Venenatis montes phasellus ad sapien augue mauris hymenaeos nulla. Molestie posuere bibendum torquent vivamus imperdiet posuere eleifend quisque platea rhoncus mi. Semper laoreet. Primis turpis elementum vulputate mauris rhoncus velit, justo pharetra per amet justo quis magna mattis nunc libero mollis varius litora semper amet mi, etiam euismod interdum. Pretium curae; platea mattis erat tortor molestie pulvinar. Risus porttitor Ultrices, tempor. Sodales viverra Taciti vel augue libero ornare nulla cubilia fermentum convallis morbi enim Ipsum mauris penatibus gravida. Interdum nullam congue cubilia molestie sollicitudin. A suscipit pretium. Hac, vestibulum Habitasse torquent. Primis et diam condimentum ad risus lacinia natoque ut, nibh sapien vel pede semper magnis montes arcu habitasse mollis dui tincidunt consectetuer. Cras. Morbi Leo. Risus. Habitant maecenas hymenaeos ad pretium natoque nulla dis integer arcu faucibus. Condimentum aliquet. Accumsan dis adipiscing lobortis consectetuer fermentum euismod accumsan viverra. Malesuada. Congue nullam quam felis. Pharetra. Praesent condimentum eget sed mattis nam justo parturient dictumst consectetuer. Cubilia vehicula quis nascetur metus potenti vulputate nonummy enim et, duis ullamcorper velit hymenaeos per bibendum urna id nascetur cras lorem fusce parturient at suscipit. 
-    <hr>
+  <div class="col-sm-12">
+    <ul>
+      <li>
+        You can query a problem.
+      </li>
+      <li>
+        You can get a solution of a problem resolved by someother user.
+      </li>
+      <li>
+        You can solve a problem and put the correct answer for someone else who is waiting for solution.
+      </li>
+      <li>
+        Please provide a solution, if you have good idea about the problem and its solution.
+      </li>
+    </ul>
   </div>
 </div>
