--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,23 +9,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="<%= root_path %>">Home</a>
+        <%= link_to "Home", root_path, class: "#{'active' if params[:controller] == 'welcome'} navbar-brand" %>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
           <li>
-            <%= link_to "Programing is fun! as Rubiest", rubiests_path %>
+            <%= link_to "Programing is fun! as Rubiest", rubiests_path, class: "#{'active' if params[:controller] == 'rubiests'}" %>
           </li>
           <li>
-            <%= link_to "Solutions", topics_path %>
+            <%= link_to "Solutions", topics_path, class: "#{'active' if params[:controller] == 'topics'}" %>
           </li>
           <li>
-            <%= link_to "Studies", studies_path %>
+            <%= link_to "Studies", studies_path, class: "#{'active' if params[:controller] == 'studies'}" %>
           </li>
-
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle <%= more_nav_active_class %>" data-toggle="dropdown">More<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
                 <%= link_to "About", about_index_path %>
@@ -41,7 +40,7 @@
 
         <% if current_user.present? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, <%= current_user.username.upcase %><b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle <%= user_nav_active_class %>" data-toggle="dropdown">Hi, <%= current_user.username.upcase %><b class="caret"></b></a>
             <ul class="dropdown-menu">
              <!--  <li>
                 <%#= link_to "Settings", edit_user_registration_path(current_user) %>
