--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "Programing is fun! as Rubiest", rubiests_path, class: "#{'active' if params[:controller] == 'rubiests'}" %>
           </li>
           <li>
-            <%= link_to "Solutions", topics_path, class: "#{'active' if params[:controller] == 'topics'}" %>
+            <%= link_to "Solutions", topics_path, class: "#{'active' if ["topics", "problems"].include?(params[:controller])}" %>
           </li>
           <li>
             <%= link_to "Studies", studies_path, class: "#{'active' if params[:controller] == 'studies'}" %>
@@ -40,7 +40,7 @@
 
         <% if current_user.present? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle <%= user_nav_active_class %>" data-toggle="dropdown">Hi, <%= current_user.username.upcase %><b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle <%#= user_nav_active_class %>" data-toggle="dropdown">Hi, <%= current_user.username.upcase %><b class="caret"></b></a>
             <ul class="dropdown-menu">
              <!--  <li>
                 <%#= link_to "Settings", edit_user_registration_path(current_user) %>
