--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -3,28 +3,36 @@
 <%= render "shared/solution_anchors" %>
 <!-- Intro Content -->
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col-sm-12">
     <%= form_for [:topic, @problem] do |form| %>
-     <fieldset class="form-group">
-      <%= form.label "Related To Language", for: "topic" %>
-      <%= form.select :topic_id, options_for_select(Topic.topic_options, @topic.id), {}, {:class => "form-control"} %>
-    </fieldset>
-
-    <fieldset class="form-group">
-      <%= form.label "Title", for: "title" %>
-      <%= form.text_field :title, class: "form-control", placeholder: "Title...." %>
-    </fieldset>
-
-    <fieldset class="form-group">
-      <%= form.label "Query", for: "Query" %>
-      <%= form.text_area :description, id: "editor", class: "form-control", placeholder: "Query...." %>
-    </fieldset>
-    <div id="editor-preview">
-      <span id="header"></span>
-      <span id="data"></span>
+    <div class="col-sm-12">
+      <div class="row">
+        <div class="col-sm-6">
+          <fieldset class="form-group">
+            <%= form.label "Title", for: "title" %>
+            <%= form.text_field :title, class: "form-control", placeholder: "Title...." %>
+          </fieldset>
+        </div>
+        <div class="col-sm-6">
+          <fieldset class="form-group">
+            <%= form.label "Topic related to", for: "topic" %>
+            <%= form.select :topic_id, options_for_select(Topic.topic_options, @topic.id), {}, {:class => "form-control"} %>
+          </fieldset>
+        </div>
+      </div>  
     </div>
+    <div class="col-sm-12">
+      <fieldset class="form-group">
+        <%= form.label "Query", for: "Query" %>
+        <%= form.text_area :description, id: "editor", class: "form-control", placeholder: "Query...." %>
+      </fieldset>
+      <div id="editor-preview">
+        <span id="header"></span>
+        <span id="data"></span>
+      </div>
 
-    <button type="submit" class="btn btn-info width-hundred-percent">Query</button>
+      <button type="submit" class="btn btn-info width-hundred-percent">Query</button>
+    </div>
     <% end %>
   </div>
 </div>
