singin with socials only working..

--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -21,6 +21,7 @@
 <div class="row">
   <%- if devise_mapping.omniauthable? %>
     <%- resource_class.omniauth_providers.each_with_index do |provider, index| %>
+      <% provider = provider == "google_oauth2" ? "google" : provider %>
       <div class="col-sm-6">
       <%= link_to omniauth_authorize_path(resource_name, provider), class: "btn btn-block btn-social btn-#{provider}" do %>
         <span class="fa fa-<%= provider %>"></span>
