google signup ui setup

--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -21,10 +21,10 @@
 <div class="row">
   <%- if devise_mapping.omniauthable? %>
     <%- resource_class.omniauth_providers.each_with_index do |provider, index| %>
-      <% provider = provider == "google_oauth2" ? "google" : provider %>
+      <% provider_class = provider == :google_oauth2 ? :google : provider %>
       <div class="col-sm-6">
-      <%= link_to omniauth_authorize_path(resource_name, provider), class: "btn btn-block btn-social btn-#{provider}" do %>
-        <span class="fa fa-<%= provider %>"></span>
+      <%= link_to omniauth_authorize_path(resource_name, provider), class: "btn btn-block btn-social btn-#{provider_class}" do %>
+        <span class="fa fa-<%= provider_class %>"></span>
         Sign in with <%= OmniAuth::Utils.camelize(provider)%>
       <% end %>
       </div>
