will paginate removed

--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -25,6 +25,6 @@
     <% end %>
   </div>
   <div class="col-sm-12 text-center">
-    <%= paginate @search.hits %>
+    <%#= paginate @problems %>
   </div>
 </div>
