--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -11,3 +11,12 @@
     <div class="modal-content"></div>
   </div>
 </div>
+
+
+
+<!-- Sunspot Searches Advance Search Model -->
+<div class="modal fade" id="searches-advance-search-modal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content"></div>
+  </div>
+</div>
