rubiests to rubyists correct specilling

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
           <li>
-            <%= link_to "Programing is fun! as Rubiest", rubiests_path, class: "#{'active' if params[:controller] == 'rubiests'}" %>
+            <%= link_to "Programing is fun! as Rubyist", rubyists_path, class: "#{'active' if params[:controller] == 'rubiests'}" %>
           </li>
           <li>
             <%= link_to "Solutions", topics_path, class: "#{'active' if ["topics", "problems"].include?(params[:controller])}" %>
