--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,10 +20,10 @@
       
   </div>
   <div class="col-md-3 portfolio-item main-page-image">
-      <%= link_to rubiests_path do %>
-        <%= create_asset_image_template({image_asset_code: "programing_is_fun!_as_rubiest", class: "home-page-image"}) %>
+      <%= link_to rubyists_path do %>
+        <%= create_asset_image_template({image_asset_code: "programing_is_fun!_as_rubyist", class: "home-page-image"}) %>
       <% end %>
-      <%= link_to "Programing is fun! as Rubiest", rubiests_path, class: "main-link" %>
+      <%= link_to "Programing is fun! as Rubyist", rubyists_path, class: "main-link" %>
   </div>
 </div>
 <!-- /.row -->
