emailer for solutions and active job with sidekiq implementation

--- a/app/views/informations_mailer/problem_information_mailer_to_the_admin.html.erb
+++ b/app/views/informations_mailer/problem_information_mailer_to_the_admin.html.erb
@@ -3,20 +3,22 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SnmMaurya Contact</title>
+<title>SnmMaurya Problems</title>
 <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
 </head>
 <body style="margin:0;">
 <p>
-  <h3>Hi SnmSpace</h3>
+  <h3>Hi Snm Maurya</h3>
   <p>
     A new problem created by - <%= @options[:user].username %>
     <hr>
     <p>
-      <strong>Name:</strong> <%= @options[:user].username %><br>
-      <strong>email:</strong> <%= @options[:user].email %><br>
-      <strong>Topic:</strong> <%= @options[:topic].title %><br>
-      <strong>Problem:</strong> <%= @options[:problem].title %><br>
+      <p>
+        <strong>Problem:</strong><br>
+        <a href="<%= Rails.application.routes.url_helpers.topic_problem_url(@options[:topic], @options[:problem], host: @options[:host]) %>">
+          <%= @options[:problem].title %>
+        </a>
+      </p>
     </p>
     <%= render "shared/emailers/footer" %>
   </p>
