--- a/app/views/problems/_solution_actions.html.erb
+++ b/app/views/problems/_solution_actions.html.erb
@@ -1,4 +1,8 @@
 <div class="text-information">
-  <%=  link_to "Edit", edit_topic_problem_solution_path(@topic, @problem, solution), role: "button", data: {remote: true} %> &nbsp;
-  <%=  link_to "Delete",  topic_problem_solution_path(@topic, @problem, solution), role: "button", method: :delete, data: {confirm: "Are you sure ?"} %> &nbsp;
+  <% if can? :update, solution %>
+    <%=  link_to "Edit", edit_topic_problem_solution_path(@topic, @problem, solution), role: "button", data: {edit: true} %> &nbsp;
+  <% end %>
+  <% if can? :destroy, solution %>
+    <%=  link_to "Delete",  topic_problem_solution_path(@topic, @problem, solution), role: "button", method: :delete, data: {confirm: "Are you sure ?", delete: true} %> &nbsp;
+  <% end %>
 </div>
