--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,7 +5,9 @@
   <% @portfolios.each do |portfolio| %>
     <div class="col-md-6 portfolio-item text-center snm-height-four">
       <a href="<%= portfolio_path(portfolio) %>" data-toggle="modal" data-target="#portfolioModal", data-remote="false">
-        <%= image_tag portfolio.images.last.data.url(:original), alt: portfolio.title, class: "snm-image-size-portfolio-one" %>
+        <% if portfolio.images.present? %>
+          <%= image_tag portfolio.images.last.data.url(:portfolio), alt: portfolio.title, class: "snm-image-size-portfolio-one" %>
+        <% end %>
       </a>
       <h3>
         <%= link_to portfolio.title, "javascript: void(0)" %>
