--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-6 portfolio-item text-center snm-height-four">
       <a href="<%= study_lessions_path(study) %>">
         <% if study.images.last.present? %>
-          <%= image_tag study.images.last.data.url(:original), alt: study.title, class: "snm-image-size-portfolio-one" %>
+          <%= image_tag study.images.last.data.url(:solution), alt: study.title, class: "snm-image-size-portfolio-one" %>
         <% end %>
       </a>
       <h3>
