--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -46,4 +46,27 @@
       </div>
     <% end %>
   </div>
+
+  <div class="col-sm-12">
+    <hr>
+    <strong class="block">Contact Informations</strong>
+    <hr>
+    <div class="col-sm-6">
+      <span><strong>Name: </strong></span> Sandeep Maurya
+      <hr>
+      <span><strong>Contact: </strong></span> +91 7666760715
+      <hr>
+      <span><strong>Github: </strong></span> <a href="https://www.github.com/snmmaurya">snmmaurya</a>
+      <hr>
+    </div>
+
+    <div class="col-sm-6">
+      <span><strong>Email: </strong></span> snmmaurya@gmail.com / snmspace@gmail.com
+      <hr>
+      <span><strong>Website: </strong></span> <a href="http://www.snmmaurya.com">http://www.snmmaurya.com</a>
+      <hr>
+      <span><strong>Twitter: </strong></span> <a href="https://www.twitter.com/snmmaurya">snmmaurya</a>
+      <hr>
+    </div>
+  </div>
 </div>
