--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -4,28 +4,33 @@
 <%= render partial: "shared/meta_data" %>
 <!-- Intro Content -->
 <div class="row">
-  <div class="col-sm-12">
-    <% if @problems.present? %>
-      <% @problems.each_with_index do |problem, index| %>
-        <div class="col-sm-12">
-          <div class="text-title"> <%= link_to problem.title, topic_problem_path(@topic, problem) %></div>
-          <div class="spacer-10"></div>
-          <div class="text-description"> <%= problem.description.truncate(250).html_safe if problem.description.present? %></div>
-          <div class="col-sm-12 text-right">
-            <%= render partial: "problems/problem_actions", locals: {problem: problem} %>
-            <%= render partial: "problems/informations", locals: {datetime: problem.created_at, user: problem.user, counter: problem.solutions.count } %>
+  <div class="col-sm-9">
+    <div class="col-sm-12">
+      <% if @problems.present? %>
+        <% @problems.each_with_index do |problem, index| %>
+          <div class="col-sm-12">
+            <div class="text-title"> <%= link_to problem.title, topic_problem_path(@topic, problem) %></div>
+            <div class="spacer-10"></div>
+            <div class="text-description"> <%= problem.description.truncate(250).html_safe if problem.description.present? %></div>
+            <div class="col-sm-12 text-right">
+              <%= render partial: "problems/problem_actions", locals: {problem: problem} %>
+              <%= render partial: "problems/informations", locals: {datetime: problem.created_at, user: problem.user, counter: problem.solutions.count } %>
+            </div>
+            <% if index < @problems.count - 1  %>
+              <div class="col-sm-12 text-center"><hr></div>
+            <% end %>
           </div>
-          <% if index < @problems.count - 1  %>
-            <div class="col-sm-12 text-center"><hr></div>
-          <% end %>
-        </div>
 
+        <% end %>
+      <% else %>
+        <%= render "shared/search_not_found" %>
       <% end %>
-    <% else %>
-      <%= render "shared/search_not_found" %>
-    <% end %>
+    </div>
+    <div class="col-sm-12 text-center">
+      <%= paginate @problems %>
+    </div>
   </div>
-  <div class="col-sm-12 text-center">
-    <%= paginate @problems %>
+  <div class="col-sm-3">
+    This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !This is add section  !
   </div>
 </div>
