--- a/app/views/shared/_header_title.html.erb
+++ b/app/views/shared/_header_title.html.erb
@@ -1,4 +1,5 @@
-<% if defined?(header_title) && defined?(header_sub_title) %>
+<!-- Removing Page header information -->
+<% if false #defined?(header_title) && defined?(header_sub_title) %>
   <% content_for :header_title do %>
     <div class="col-lg-12 text-right">
       <h3 class="page-header">
