--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,10 +38,10 @@
   </div>
 
   <div class="col-md-3 portfolio-item main-page-image">
-    <%= link_to contact_path do %>
+    <%= link_to studies_path do %>
       <%= create_asset_image_template({image_asset_code: "contact", class: "home-page-image"}) %>
     <% end %>
-    <%= link_to "Contact Me", contact_path, class: "main-link" %>
+    <%= link_to "Studies", studies_path, class: "main-link" %>
   </div>
   <div class="col-md-3 portfolio-item main-page-image">
     <%= link_to blogs_path do %>
