on mobile responsive font scalling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Mobile view first -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Default meta data setting if page has not meta data -->
     <% meta_options = default_meta_data %>
     <%= metamagic title: meta_options[:title], description: meta_options[:description], keywords: meta_options[:keywords] %>
