elastic search for problem modal

--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
     <div class="col-sm-12 text-center">
-      <%= paginate @problems %>
+      <%#= paginate @problems %>
     </div>
   </div>
   <div class="col-sm-3">
